# cineindex

./: .gitignore  README.md  cineindex-history.lua  main.py  pyproject.toml
app/: db.py  main.py
app/media/: __init__.py  crawler.py  history.py  parser.py  search.py
backend/: main.py
backend/app/: db.py
backend/app/media/: crawler.py  search.py
