[project]
name = "cineindex"
version = "0.1.2"
description = "A fast terminal-based media indexer and player for directory-style servers."
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "rapidfuzz>=3.9.0",
    "colorama>=0.4.6",
]

[project.scripts]
cineindex = "backend.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
