[project]
name = "cineindex"
version = "0.1.2"
description = "A fast terminal-based media indexer and player for directory-style servers."
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Fahim Ahmed", email = "fahim.ahmed1453@gmail.com" }]
dependencies = [
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "rapidfuzz>=3.9.0",
    "colorama>=0.4.6",
]

[project.urls]
homepage = "https://github.com/fahim-ahmed05/CineIndex"
repository = "https://github.com/fahim-ahmed05/CineIndex"

[project.scripts]
cineindex = "app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Build config (wheel)
[tool.hatch.build.targets.wheel]
packages = ["app"]
include = ["cineindex-history.lua"]

# (Optional) sdist config mirrors the wheel include
[tool.hatch.build.targets.sdist]
include = ["app/**/*", "README.md", "LICENSE", "pyproject.toml"]
