[project]
name = "cineindex"
version = "0.1.9"
description = "A fast terminal-based media indexer and player for directory-style servers."
requires-python = ">=3.11"
license = { text = "MIT" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["media", "mpv", "indexer", "crawler", "movies", "streaming"]
authors = [{ name = "Fahim Ahmed", email = "fahim.ahmed1453@gmail.com" }]
dependencies = [
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "rapidfuzz>=3.9.0",
    "colorama>=0.4.6",
    "platformdirs>=4.0.0",
]

[project.urls]
homepage = "https://github.com/fahim-ahmed05/CineIndex"
repository = "https://github.com/fahim-ahmed05/CineIndex"

[project.scripts]
cineindex = "app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.sdist]
include = ["app/**/*", "README.md", "LICENSE", "pyproject.toml"]
